--- a/codewell-fe/public/locales/ro/translation.json
+++ b/codewell-fe/public/locales/ro/translation.json
@@ -3,13 +3,17 @@
   "Confirm password": "Confirmă parola",
   "Email": "Email",
   "email": "email",
+  "First name": "Prenume",
   "Invalid email address!": "Adresă de email invalidă!",
+  "Last name": "Nume de familie",
   "Name": "Nume",
   "Password": "Parolă",
   "Password must be at least 10 characters!":
-    "Parola trebuie să conțină minim 10 caractere",
+    "Parola trebuie să conțină minim 10 caractere!",
   "Please confirm your password!": "Te rog confirmă parola!",
   "Please input your email!": "Te rog introdu emailul",
+  "Please input your first name!": "Te rog introdu prenumele tău!",
+  "Please input your last name!": "Te rog introdu numele tău de familie!",
   "Please input your name!": "Te rog introdu numele tău!",
   "Please input your password!": "Te rog introdu o parolă!",
   "Please input your username!": "Te rog introdu un nume de utilizator!",
