Add missing translations

--- a/codewell-fe/public/locales/ro/translation.json
+++ b/codewell-fe/public/locales/ro/translation.json
@@ -1,6 +1,8 @@
 {
   "About": "Despre",
+  "Add your code": "Adaugă codul tău",
   "Confirm password": "Confirmă parola",
+  "Create code": "Crează cod",
   "Email": "Email",
   "email": "email",
   "First name": "Prenume",
